# canonical-account-prefixes

./: CHANGELOG.md  README.md
crates/canonical-account-prefixes/: Cargo.toml
crates/canonical-account-prefixes/src/: lib.rs  prefix.rs  prefix_account.rs
